# rootech

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
day1/bitops/: CMakeLists.txt  README.md
day1/bitops/include/: bitops.h
day1/bitops/src/: bitops.c
day1/bitops/tests/: test_bitops.c
day1/frame/: CMakeLists.txt  README.md
day1/frame/include/: frame.h
day1/frame/src/: frame.c
day1/frame/tests/: test_frame.c
day1/memlayout/: CMakeLists.txt  README.md
day1/memlayout/src/: memlayout.c
day1/note/: day1.md  day1_test_result.md
day2/container_of/: CMakeLists.txt  README.md
day2/container_of/include/: container_of.h
day2/container_of/src/: container_of.c
day2/container_of/tests/: test_container_of.c
day2/dispatcher/: CMakeLists.txt  README.md
day2/dispatcher/include/: dispatcher.h
day2/dispatcher/src/: dispatcher.c
day2/dispatcher/tests/: test_dispatcher.c
day2/regs/: CMakeLists.txt  README.md
day2/regs/include/: regs.h
day2/regs/src/: regs.c
day2/regs/tests/: test_regs.c
day3/fsm/: CMakeLists.txt  README.md
day3/fsm/include/: fsm.h
day3/fsm/src/: fsm.c
day3/fsm/tests/: test_fsm.c
day3/pool/: CMakeLists.txt  README.md
day3/pool/include/: pool.h
day3/pool/src/: pool.c
day3/pool/tests/: test_pool.c
day3/ringbuf/: CMakeLists.txt  README.md
day3/ringbuf/include/: ringbuf.h
day3/ringbuf/src/: ringbuf.c
day3/ringbuf/tests/: test_ringbuf.c
docs/: SETUP_WINDOWS.md
shared/: test_framework.h
